--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, rem, tempore, tempora mollitia consequuntur veniam vitae dolores molestiae rerum odit esse vero nulla magnam similique id voluptas harum labore libero!</p>
       
       <hr style="width: 85%; margin: 20px 0;">
+      </main>
    <footer>Hendricks©2016</footer>
 
 </body>
