--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
    	<h1>WEBI 2023 Branching</h1>
    </header>
    <main>
-   	<h2>Let's Play</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, rem, tempore, tempora mollitia consequuntur veniam vitae dolores molestiae rerum odit esse vero nulla magnam similique id voluptas harum labore libero!</p>
+     <h2>Bill Hendricks</h2>
+     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, rem, tempore, tempora mollitia consequuntur veniam vitae dolores molestiae rerum odit esse vero nulla magnam similique id voluptas harum labore libero!</p>
       
       <hr style="width: 85%; margin: 20px 0;">
 
